testsuite/escript/errors/errors012-string-backslash-newline.err2
errors012-string-backslash-newline.src:1:10: error: String literal contains a newline.